--- a/README
+++ b/README
@@ -394,10 +394,9 @@ Then in mainly reverse chronological order:
 * A general [http://www.ansys.net  ANSYS macro repository] (ansys.net)
 * The [http://www.ansys.com ANSYS homepage]
 * Xansys, an [http://www.xansys.org ANSYS online community] (registration necessary for the forum)
-* A competitor of ANSYS-Mode: The [http://www.padtinc.com/pedal  Pedal]
-script editor
 * [http://www.auc-ev.de/ AUC], the ANSYS User Club in Germany
-* Another APDL [http://apdl.de editor], but the site seems to be abandoned
+* A competitor of ANSYS-Mode: The commercial [http://www.padtinc.com/pedal  Pedal] script editor
+* Another free [http://apdl.de APDL editor], but this site seems to be abandoned since 2010
 
 == Bugs and Problems ==
 
