--- a/A-M_APDL_reference.org
+++ b/A-M_APDL_reference.org
@@ -321,13 +321,14 @@ and you are getting a diffent element highlighting.
     indexing A(0.3).
   - you can get table array values with real index values but must use
     integers for assigning them the values, the same goes for *vplot:
-    it needs the arry indices in integers.
+    it needs the arry indices in integers and is, moreover, only
+    capable to plot the columns and not their line values!
   - *vplot does only plot the columns of arrys, it is not possible to
     specify rows
   - No direct array values to file export in GUI mode <- write command
     file for *vwrite, or use a (lookup) table for this purpose
   - *vwread does not work with C format specifiers in contrast to *vwrite
-  - Still (v15) no round function in sight, but someting like
+  - Still (v15) no *round* function in sight, but someting like
     nint(max*1e3)/1e3 might do
   - One cannot easily get the variable value, either one must assign
     the variable to another one, or use the `*stat' command
