--- a/TODO
+++ b/TODO
@@ -32,8 +32,9 @@
                   fixed 2012-09-02 => Emacs 24.3?)
   - Skeleton :: Mouse selection of -structural-template does not work
                 (because of stipulated user text input from this skeleton)
-*  15.0.1:
+*  16.1.1:
 ** TODO Freeze
+   - update ansys+Emacs.png to github
    - update instead of erasing the help overlay, when keyword is
      changed/edited and -help-overlay is reapplied. And resetting the
      overlay when the command is above the current line
@@ -112,12 +113,11 @@
     - mouse-choose-completion is obsolete since E23.2
 ** Release
    - indentation of template -output-to-file is not correct
-   - place all stuff on google drive
    - makefile fontification of _tutorial PDFs is not working,
      necessary to load them by hand before exporting
    - document A-M_in-depth_tutorial.org
        - fontification.mac, leave it in the mode archive for a while
-       - upload to Google code: file:googlecode_upload.py
+       - upload to github.com
    - fontification.el
      - add the 4 ANSYS neutral file (aux15) functions to the parameter-help,
        .anf files from DM anf export
@@ -137,7 +137,7 @@
         *cfclos
 	 M-? shows help for *mwrite, when cursor behind *cfclos
    - -introductory_tutorial.org
-     - update download page to 15.0.1 in the download slide
+     - update download page to 16.0.1 in the download slide
      - in variable.png symbols Ns and Ls are not highlighted as
        variables
      - change sequence of alignment.pgn first not aligned, second aligned
@@ -166,21 +166,23 @@
     numbers, default specifiers
   - update defcustom list in ./bug-report.sh -> ansys-submit-bug-report
 
-# ;  (tags-query-replace "GNU/Linux" "GnuLinux") ;-)
 # ;  (tags-query-replace "GNU/Linux" "GNU-Linux") ;-)
     (tags-query-replace "145" "150")
     (tags-query-replace "24.2" "24.3")
     (tags-query-replace "14.5" "15.0")
     (tags-query-replace "15.0.1" "15.0.1")
+    (tags-query-replace "15.0.1" "16.1.1")
+    # version No
+    (tags-query-replace "150" "161")
     # for _mode_version
     (tags-query-replace "\"2\"" "\"1\"")
     (tags-query-replace "- 2014" "- 2015")
 
     checkdoc then dry run: Emacs
-    24.2 -Q testing: fontification.mac /*commands and default command
+    24.5 -Q testing: fontification.mac /*commands and default command
     lines, every menu entry.  byte-compile-file then dry run
     profiling, major mode conventions: multiple loading of this mode?.
-  - check Emacs versions on longterm OS systems compile with 22.X,
+  - check Emacs versions on longterm OS systems compile with 24.X,
     then pretests, emacs-snapshots, clash with Emacs releases (yearly
     Emacs cycle)?
 
@@ -191,6 +193,7 @@
     Google Code with download, documentation page
   - publication emails (with tutorial and news):
 
+    makgul@gmail.com,
     weizhuo.du@peraglobal.com,
     info@auc-ev.de,
     afoleite@gmail.com,
