--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-# #+STARTUP: overview
 #+STARTUP: content
 * Deficiencies:
   - Highlighting :: Experimental user variable highlighting
@@ -172,10 +171,11 @@
     (tags-query-replace "14.5" "15.0")
     (tags-query-replace "15.0.1" "15.0.1")
     (tags-query-replace "15.0.1" "16.1.1")
+    (tags-querey-replace "16.1" "16.2") 
     # version No
     (tags-query-replace "150" "161")
     # for _mode_version
-    (tags-query-replace "\"2\"" "\"1\"")
+    (tags-query-replace "\".11\"" "\".2\"")
     (tags-query-replace "- 2014" "- 2015")
 
     checkdoc then dry run: Emacs
@@ -464,8 +464,6 @@
     |   1 |
     |   2 |
     | 255 |
-
-    
 
 # local variables:
 # show-trailing-whitespace: t
